--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,12 @@ body {
 
 header {
     background: #f8f9fa;
-    height: 70px;
 }
 
 header > .head_nav {
-    background-color: orangered;
+    background-color: white;
     width: 100%;
 }
-
-
 
 .fa-bell {
     color: #ff8f00;
@@ -36,6 +33,8 @@ header > .head_nav {
 
 
 
+
+
 /* 
 @@@
 @@@@@------ASIDE---------
@@ -44,7 +43,6 @@ header > .head_nav {
 
 aside {
     height: calc(100vh - 70px);
-    padding: 20px;
 }
 
 aside i {
